# desktop-wiki-py

./: .gitignore  README.md  construct---app---full.py  construct_app_full.py  desktop-wiki.desktop.example  main.py  pyproject.toml  requirements.txt  setup_project.py  test_wiki_db.py  wiki.db  wiki.db-shm  wiki.db-wal  wiki.db.bak  wiki_completa.html  wiki_domain.py  wiki_export.html  wiki_ui.py  wikidb.py
exporters/: mkdocs.py
services/: wiki_service.py
src/desktop_wiki/: main.py
src/desktop_wiki/core/: wiki_domain.py
src/desktop_wiki/exporters/: base.py  mkdocs.py
src/desktop_wiki/services/: wiki_service.py
src/desktop_wiki/ui/: wiki_ui.py
src/wiki_export_mkdocs/: mkdocs.yml
src/wiki_export_mkdocs/docs/: funcionamento.md  index.md  instala-o-da-aplica-o.md  introdu-o.md  testes.md
tests/: test_db.sqlite  test_wiki_domain.py
~/wiki_mkdocs_export/: mkdocs.yml
~/wiki_mkdocs_export/docs/: cria-o-de-ambientes.md  index.md  inser-o-de-informa-o.md  introdu-o.md
