[build-system]
requires = ["hatchling>=1.22.0"]
build-backend = "hatchling.build"

[project]
name = "desktop-wiki"
version = "0.1.0"
description = "A lightweight, local-first desktop personal wiki application built with Python and Tkinter, featuring Markdown editing, live preview, page indexing, and MkDocs export."

readme = { file = "README.md", content-type = "text/markdown" }

authors = [
    { name = "Vera", email = "vera.maria.dg@gmail.com" },
]

license = { text = "MIT" }
requires-python = ">=3.9"

keywords = [
    "wiki",
    "personal-knowledge-management",
    "tkinter",
    "markdown",
    "offline",
    "desktop-app",
    "mkdocs",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: X11 Applications",
    "Environment :: MacOS X",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Natural Language :: Portuguese",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: News/Diary",
    "Topic :: Text Editors",
    "Topic :: Text Processing",
    "Topic :: Text Processing :: Markup :: Markdown",

]

dependencies = [
    "markdown>=3.5",
]

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
]

docs = [
    "mkdocs",
    "mkdocs-material",
    "pymdown-extensions",
]

[project.urls]
Homepage = "https://github.com/Verag/app---wiki---folder"

[project.scripts]
desktop-wiki = "desktop_wiki.main:run_app"


[tool.hatch.build.targets.wheel]
packages = ["src/desktop_wiki"]

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.ruff]
line-length = 88
target-version = "py39"